fixing carousel image size on safari

--- a/web/src/components/Carousel/carousel.module.css
+++ b/web/src/components/Carousel/carousel.module.css
@@ -117,7 +117,7 @@
 .embed p{
   display: none;
 }
-.figure, .figure  div{
+.figure, .figure  div, .figure  image{
   height: 40vh;
   display: inline-block;
 }
