--- a/web/src/components/Map/map.module.css
+++ b/web/src/components/Map/map.module.css
@@ -20,7 +20,7 @@
     top:15px;
     padding:10px;
     background:var(--light-blue-gradient-solid);
-    max-width: 50%;
+    max-width: calc(100% - 70px);
   @media (--media-min-small) {
     margin:0;
     max-width: 60%;
